@@ -110,25 +110,52 @@ static int getint (const char *s, PRN *prn)
 
 /* ........................................................... */
 
-static void get_critical (GtkWidget *w, gpointer data)
+static int parse_critical_input (const char *str, int *i, 
+				 int *df, int *n)
+{
+    *i = -1;
+
+    if (sscanf(str, "critical F %d %d", df, n) == 2) *i = 3;
+    else if (sscanf(str, "critical X %d", df) == 1) *i = 2;
+    else if (sscanf(str, "critical t %d", df) == 1) *i = 1;
+    else if (!strncmp(str, "critical N", 10)) *i = 0;
+    
+    if (*i >= 0) return 0;
+    else return 1;
+}
+
+/* ........................................................... */
+
+void get_critical (GtkWidget *w, gpointer data)
 {
     lookup_t **look = (lookup_t **) data;
     void *handle;
     void *funp = NULL;
-    void (*norm_table)(PRN *) = NULL;
+    void (*norm_table)(PRN *, int) = NULL;
     void (*dw)(int, PRN *) = NULL;
-    void (*tcrit)(int, PRN *) = NULL;
-    void (*chicrit)(int, PRN *) = NULL;
-    int i, n = 0, df = 0;
+    void (*tcrit)(int, PRN *, int) = NULL;
+    void (*chicrit)(int, PRN *, int) = NULL;
+    int i, n = -1, df = -1;
     PRN *prn;
     extern GtkItemFactoryEntry view_items[];
 
     if (open_plugin("stats_tables", &handle)) return;
 
-    i = gtk_notebook_get_current_page(GTK_NOTEBOOK(look[0]->book));
-    if (bufopen(&prn)) {
-	close_plugin(handle);
-	return;
+    if (w == NULL) { /* command line, not GUI menu */
+	lineprint_t *lpt = (lineprint_t *) data;
+
+	if (parse_critical_input(lpt->line, &i, &df, &n)) {
+	    errbox("Couldn't parse 'critical' line");
+	    close_plugin(handle);
+	    return;
+	}
+	prn = lpt->prn;
+    } else { /* coming off GUI menu */
+	i = gtk_notebook_get_current_page(GTK_NOTEBOOK(look[0]->book));
+	if (bufopen(&prn)) {
+	    close_plugin(handle);
+	    return;
+	}	
     }
 
     switch (i) {
@@ -136,19 +163,24 @@ static void get_critical (GtkWidget *w, gpointer data)
 	funp = norm_table = get_plugin_function("norm_lookup", handle);
 	break;
     case 1: /* t */
-	df = atoi(gtk_entry_get_text(GTK_ENTRY(look[i]->entry[0])));
+	if (w != NULL && df == -1)
+	    df = atoi(gtk_entry_get_text(GTK_ENTRY(look[i]->entry[0])));
 	funp = tcrit = get_plugin_function("t_lookup", handle);
 	break;
     case 2: /* chi-square */
-	df = atoi(gtk_entry_get_text(GTK_ENTRY(look[i]->entry[0])));
+	if (w != NULL && df == -1)
+	    df = atoi(gtk_entry_get_text(GTK_ENTRY(look[i]->entry[0])));
 	funp = chicrit = get_plugin_function("chisq_lookup", handle);
 	break;
     case 3: /* F */
-	df = atoi(gtk_entry_get_text(GTK_ENTRY(look[i]->entry[0])));
-	n = atoi(gtk_entry_get_text(GTK_ENTRY(look[i]->entry[1])));
+	if (w != NULL && df == -1) {
+	    df = atoi(gtk_entry_get_text(GTK_ENTRY(look[i]->entry[0])));
+	    n = atoi(gtk_entry_get_text(GTK_ENTRY(look[i]->entry[1])));
+	}
 	break;
     case 4: /* DW */
-	n = atoi(gtk_entry_get_text(GTK_ENTRY(look[i]->entry[0])));
+	if (w != NULL)
+	    n = atoi(gtk_entry_get_text(GTK_ENTRY(look[i]->entry[0])));
 	funp = dw = get_plugin_function("dw_lookup", handle);
 	break;
     default:
@@ -157,19 +189,19 @@ static void get_critical (GtkWidget *w, gpointer data)
 
     if (i != 3 && funp == NULL)  {
 	close_plugin(handle);
-	gretl_print_destroy(prn);
+	if (w != NULL) gretl_print_destroy(prn);
 	return;
     }
     
     switch (i) {
     case 0:
-	(*norm_table)(prn);
+	(*norm_table)(prn, w != NULL);
 	break;
     case 1:
-	(*tcrit)(df, prn);
+	(*tcrit)(df, prn, w != NULL);
 	break;
     case 2:
-	(*chicrit)(df, prn);
+	(*chicrit)(df, prn, w != NULL);
 	break;	
     case 3:
 	pprintf(prn, "Approximate critical values of F(%d, %d)\n\n",
@@ -187,8 +219,9 @@ static void get_critical (GtkWidget *w, gpointer data)
 
     close_plugin(handle);
 
-    view_buffer(prn, 77, 300, "gretl: statistical table", STAT_TABLE,
-		view_items);
+    if (w != NULL)
+	view_buffer(prn, 77, 300, "gretl: statistical table", STAT_TABLE,
+		    view_items);
 }
 
 /* ........................................................... */
