@@ -33,7 +33,8 @@ typedef enum {
     CORC,     
     CORR,     
     CORRGM,   
-    CRITERIA, 
+    CRITERIA,
+    CRITICAL,
     CUSUM,
     DELEET,
     DIFF,
