@@ -243,6 +243,7 @@ void getcmd (char *line, DATAINFO *pdinfo, CMD *command,
 	command->ci == SETOBS ||
 	command->ci == CHOW ||
 	command->ci == CUSUM ||
+	command->ci == CRITICAL ||
 	command->ci == OPEN ||
 	command->ci == IMPORT ||
 	command->ci == ENDLOOP ||
